<resources>
    <string name="app_name">My Application</string>
    <string name="menuDataTableText">Data Table</string>
    <string name="menuChart1Text">Temperature/Pressure/Humidity Chart</string>
    <string name="menuChart2Text">Position Chart</string>
    <string name="menuJoystickChartText">Joystick positiom chart </string>
    <string name="menuLedMatrixText">LED matrix controller</string>
    <string name="menuOptionsText">Options</string>
    <string name="optionsIpText">IP:</string>
    <string name="optionsPortText">Port:</string>
    <string name="optionsApiText">Wersja API serw:</string>
    <string name="optionsSampleTimeText">Okres. prób[ms]:</string>
    <string name="optionsSampleNumberText">Liczb. zap.prób:</string>
    <string name="ledPaintOnePixelBtnText">Pokoloruj jedną komórkę</string>
    <string name="ledPaintXRowBtnText">Pokoloruj\n wiersz X</string>
    <string name="ledPaintYColumnBtnText">Pokoloruj\n kolumnę Y</string>
    <string name="ledPaintAllBtnText">Pokoloruj wszystkie komórki</string>
    <string name="ledClearBtnText">CLEAR</string>
    <string name="ledSendBtnText">SEND</string>
</resources>
