<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/menuData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/button_background_inactive"
            android:onClick="btns_onClick"
            android:text="@string/menuDataTableText"
            android:textColor="@color/colourPrimaryDark" />

        <view
            android:id="@+id/view"
            class="androidx.appcompat.widget.ActionMenuView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <Button
            android:id="@+id/menuChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/button_background"
            android:onClick="btns_onClick"
            android:text="@string/menuChart1Text"
            android:textColor="@color/colourPrimaryDark" />

        <view
            android:id="@+id/view2"
            class="androidx.appcompat.widget.ActionMenuView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <Button
            android:id="@+id/menuChart2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/button_background_inactive"
            android:onClick="btns_onClick"
            android:text="@string/menuChart2Text"
            android:textColor="@color/colourPrimaryDark" />

        <view
            android:id="@+id/view3"
            class="androidx.appcompat.widget.ActionMenuView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <Button
            android:id="@+id/menuJoystickChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/button_background_inactive"
            android:onClick="btns_onClick"
            android:text="@string/menuJoystickChartText"
            android:textColor="@color/colourPrimaryDark" />

        <view
            android:id="@+id/view4"
            class="androidx.appcompat.widget.ActionMenuView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <Button
            android:id="@+id/menuLed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/button_background"
            android:onClick="btns_onClick"
            android:text="@string/menuLedMatrixText"
            android:textColor="@color/colourPrimaryDark" />

        <view
            android:id="@+id/view5"
            class="androidx.appcompat.widget.ActionMenuView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <Button
            android:id="@+id/menuOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/button_background"
            android:onClick="btns_onClick"
            android:text="@string/menuOptionsText"
            android:textColor="@color/colourPrimaryDark" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>